GNOME Bugzilla – Bug 765577
gdk/dnd: Add missing signal parameter documentation
Last modified: 2016-04-26 12:41:29 UTC
Running make made my editor jump to a warning complaining about this, so I fixed it.
Created attachment 326727 [details] [review] gdk/dnd: Add missing signal parameter documentation The cancel reason parameter was missing.
Review of attachment 326727 [details] [review]: Sure.
Attachment 326727 [details] pushed as 8f64e4a - gdk/dnd: Add missing signal parameter documentation