gdk/dnd: Add missing signal parameter documentation

The cancel reason parameter was missing.

https://bugzilla.gnome.org/show_bug.cgi?id=765577